--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_211"/>
-	<classpathentry kind="lib" path="C:/Users/wangcy@go-goal.com/Desktop/excel-database/mongodb-driver-3.4.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/wangcy@go-goal.com/Desktop/excel-database/mongodb-driver-core-3.4.2.jar"/>
+	<classpathentry excluding="/" kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/bson-3.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-3.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-core-3.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/poi-3.10.1-20140818.jar" sourcepath="C:/Users/WANGCY~1.COM/AppData/Local/Temp/decompiler/source/poi-3.10.1-sources.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-3.10.1-20140818.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
