--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,11 @@
 <classpath>
 	<classpathentry excluding="/" kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/bson-3.4.2.jar"/>
-	<classpathentry kind="lib" path="lib/mongodb-driver-3.4.2.jar"/>
+	<classpathentry kind="lib" path="lib/mongodb-driver-3.4.2.jar" sourcepath="C:/Users/WANGCY~1.COM/AppData/Local/Temp/decompiler/source/mongodb-driver-3.4.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/mongodb-driver-core-3.4.2.jar"/>
 	<classpathentry kind="lib" path="lib/poi-3.10.1-20140818.jar" sourcepath="C:/Users/WANGCY~1.COM/AppData/Local/Temp/decompiler/source/poi-3.10.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-3.10.1-20140818.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
