添加工具类

--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,13 @@
 	<classpathentry kind="lib" path="lib/poi-3.10.1-20140818.jar" sourcepath="C:/Users/WANGCY~1.COM/AppData/Local/Temp/decompiler/source/poi-3.10.1-sources.jar"/>
 	<classpathentry kind="lib" path="lib/poi-ooxml-3.10.1-20140818.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/poi-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-3.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-schemas-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-compress-1.18.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
